# deep-research-agent-for-finance

./: .gitignore  CONTEXT_FORGE_MIGRATION.md  GITHUB_PAGES.md  Makefile  README-template.md  README.md  finish-microsite.sh  main.py  make.sh  mcp_agent.config-context_forge.yaml  mcp_agent.config.yaml  meeting-notes.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml  use-case.yaml
apps/: README.md  pyproject.toml
apps/src/dra/finance/: README.md  main.py
apps/src/dra/finance/config/: mcp_agent.config.yaml
apps/src/dra/finance/templates/: github_pages_header.yaml
apps/src/dra/medical/: README.md  main.py
apps/src/dra/medical/config/: mcp_agent.config.debug.yaml
apps/src/dra/medical/templates/: medical_research_agent.md
docs/: _config.yml  about.markdown  contributing.markdown  index.markdown
docs/_includes/: header_buttons_custom.html
docs/_layouts/: default.html
dra-apps/: README.md  pyproject.toml
dra-apps/finance/: README.md
dra-apps/medical/: README.md
dra-apps/medical/config/: mcp_agent.config.ollama.debug.yaml
dra-apps/src/dra/finance/: README.md
dra-apps/src/dra/medical/: README.md
dra-core/: README.md  pyproject.toml
dra-core/src/dra/: __init__.py
dra-core/src/dra/core/: __init__.py
dra-core/src/dra/core/common/: deep_research.py  observer.py  tasks.py
dra-core/src/dra/core/common/markdown/: __init__.py  elements.py
dra-core/src/dra/core/common/utils/: main.py  paths.py
dra-core/src/dra/core/ux/: display.py  rich.py
dra-core/tests/data/: expected_excel_prompt_file.md
dra-core/tests/dra/common/: test_deep_research.py  test_observer.py  test_variables.py
dra-core/tests/dra/common/markdown/: test_markdown_section.py  test_markdown_table.py  test_markdown_tree.py
dra-core/tests/dra/common/utils/: test_paths.py  test_prompts.py  test_strings.py
examples/: README.md  mcp_agent.config-context_forge.yaml
examples/META/: Meta_Platforms_Financial_Report.md  README.md
examples/gpt-oss_20b/: META_financials.xlsx  META_report.markdown  META_report.md  META_report_problems.md  README.md  diabetes_report-1.md  diabetes_report-2.md  diabetes_report-3.md  diabetes_report.md  financials_META.xlsx
examples/old/: README.md
mcp-server-validation/: excel-mcp-server.md
output/: financials_META.xlsx
output/META/: META_report_example.markdown  financials_META.xlsx  results.markdown
src/: main-finance.py  main.py  main_finance.py
src/common/: deep_search.py  main_utils.py  observer.py  path_utils.py  prompt_utils.py  string_utils.py  variables.py
src/dra/common/: deep_research.py  deep_search.py  observer.py  tasks.py
src/dra/ux/: display.py  rich.py
src/finance_deep_search/: deep_search.py  finance_deep_search.py  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml  prompts.py  string_utils.py
src/finance_deep_search/.adaptive_workspace/: meta_financial_research_report.md  meta_financials.xlsx
src/finance_deep_search/financial_reports/: Meta_Platforms_Financial_Report.md
src/finance_deep_search/ux/: markdown.py  rich.py  (+1 more)
src/tests/: test_deep_search.py  test_prompts.py  test_string_utils.py  test_utils.py  utils.py
src/utils/: __init__.py
src/ux/: __init__.py  display.py  markdown.py  markdown_elements.py  rich.py
(+50 files in other folders)
