[project]
name = "deep-research-agent"
version = "0.5.0"
description = "MCP-based deep research toolkit with example applications in several domains: finance, medical, other research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "dra-core @ file://${PROJECT_ROOT}/dra-core",
    "hypothesis>=6.150.2",
]
