[project]
name = "dra-apps"
version = "0.4.0"
description = "Deep Research Agent applications for finance and medical research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dra-core>=0.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]